# derby-score

./: Cargo.toml
src/: main.rs
src-ui/: package-lock.json  package.json
src-ui/src/: App.css  App.tsx  Routes.tsx
src-ui/src/api/: api.ts  controlPanel.ts  events.ts  games.ts  index.ts  logos.ts  scoreboard.ts  teams.ts
src-ui/src/components/: index.tsx
src-ui/src/components/CardWithTitle/: CardWithTitle.module.scss  CardWithTitle.tsx  index.tsx
src-ui/src/components/ColorPicker/: ColorPicker.module.scss  ColorPicker.tsx
src-ui/src/components/ControlButtons/: ControlButtons.tsx
src-ui/src/components/ControlPanelClock/: ControlPanelClock.module.css  ControlPanelClock.tsx  index.tsx
src-ui/src/components/CountdownClock/: CountdownClock.tsx  index.tsx
src-ui/src/components/CountupClock/: CountupClock.tsx  index.tsx
src-ui/src/components/GamesList/: GamesList.tsx
src-ui/src/components/HomePage/: HomePage.module.scss  HomePage.tsx
src-ui/src/components/NewGameDialog/: NewGameDialog.tsx  index.tsx
src-ui/src/components/ScoreDisplay/: index.ts  (+2 more)
src-ui/src/contexts/: ClockContext.tsx  ControlPanelContext.tsx  DarkThemeContext.tsx  GameContext.tsx  ScoreboardContext.tsx  index.ts
src-ui/src/types/: Color.ts  ScoreboardTeam.ts  TimeoutType.ts  index.ts
src/api/: api.rs
src/data_stores/: logo_data_store.rs  mod.rs  team_data_store.rs
src/domain/: events.rs  game_events.rs  jam_clock.rs  jam_clock_aggregate.rs  log_aggregate.rs  mod.rs  period_clock_aggregate.rs
src/services/: clock.rs  delay_service.rs  event_bus.rs  event_store.rs  mod.rs
(+25 files in other folders)
