[package]
name = "derby-score"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] } 
simplelog = "*"
tokio = { version = "1", features = [ "full" ] }
warp = "*"
websocket = "*"

