[package]
name = "derby-score"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "*"
casey = "0.4.0"
clap = { version = "4", features = [ "derive" ] }
log = "0.4"
mockall = "0.12.1"
mockall_double = "0.3.1"
serde = { version = "1.0", features = [ "derive" ] } 
serde_json = "1.0.112"
simplelog = "*"
sqlite = "0.33"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "1.7", features = [ "v4", "fast-rng" ] }
warp = "*"
websocket = "*"

[dev-dependencies]
rand = "*"
